fix(ui): prevent non-adjacent panels from jumping during resize

--- a/packages/ui/src/components/ResizablePanel/Panel/Panel.module.css
+++ b/packages/ui/src/components/ResizablePanel/Panel/Panel.module.css
@@ -1,6 +1,6 @@
 .panel {
     position: relative;
     flex-direction: column;
-    flex: 1 0 0;
+    flex: 1 1 0;
     overflow: hidden;
 }
